--- a/index.html
+++ b/index.html
@@ -2,75 +2,82 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
     <title>Home Work 1</title>
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <div class="conteiner">
+    <div class="wrap">
       <header>
-        <nav class="main-nav">
-          <img src="./img/logo.png" alt="Logo" width="100" />
-        </nav>
-        <div class="offer">
-          <h1>БЕСПЛАТНЫЙ МАРАФОН</h1>
+        <div class="conteiner">
+          <nav class="main-nav">
+            <img src="./img/logo.png" alt="Logo" width="100" />
+          </nav>
+          <div class="offer">
+            <h1>БЕСПЛАТНЫЙ МАРАФОН</h1>
+          </div>
         </div>
       </header>
       <main class="main">
-        <h2>Домашнее задание №1</h2>
-        <ol class="list">
-          <li>
-            Посмотреть все видео первого дня:
-            <ol>
-              <li>
-                <a href="https://youtu.be/wrw0UCU66GE" target="_blank"
-                  >Приветствие</a
-                >
-              </li>
-              <li>
-                <a href="https://youtu.be/qGXH23j5oHQ" target="_blank"
-                  >Обзор макета</a
-                >
-              </li>
-              <li>
-                <a href="https://youtu.be/M__9mhFIGzI" target="_blank"
-                  >Создание структуры проекта</a
-                >
-              </li>
-              <li>
-                <a href="https://youtu.be/OMO6F8u067M" target="_blank"
-                  >Как открыть дизайн</a
-                >
-              </li>
-            </ol>
-          </li>
-          <li>Установить и настроить редактор кода VSC</li>
-          <li>
-            Подготовить проект в VSCode: Следуя за лектором - прописать весь
-            необходимый код (просто все повторить)
-          </li>
-          <li>
-            Скачать макет и открыть его в Avocode. "Поиграться" с функционалом:
-            определить цвет заголовка, размер шрифта и т.д.
-          </li>
-          <li>
-            Сделать скриншот вашего кода (разметки) в VS Code с помощью любой
-            утилиты для скриншотов. Например,
-            <a href="http://joxi.ru/" target="_blank">Joxi</a>.
-          </li>
-          <li>
-            Скриншот отправляем в телеграм-канале "Марафон GoIT" через окно
-            сообщения в самом низу, как показано на скрине:
-            <div class="img-block">
-              <img src="./img/img1.jpg" class="img" alt="Скрин вставки ДЗ" />
-            </div>
-          </li>
-          <li>Ждете подтверждения выполнения от ментора</li>
-          <li>Радуетесь своим успехам и ждете следующего задания</li>
-        </ol>
-        <div class="deadline">
-          <p>ДЗ нужно сдать к 18:00 21.03.2020</p>
-          <p>Удачи</p>
+        <div class="conteiner">
+          <h2>Домашнее задание №1</h2>
+          <ol class="list">
+            <li>
+              Посмотреть все видео первого дня:
+              <ol>
+                <li>
+                  <a href="https://youtu.be/wrw0UCU66GE" target="_blank"
+                    >Приветствие</a
+                  >
+                </li>
+                <li>
+                  <a href="https://youtu.be/qGXH23j5oHQ" target="_blank"
+                    >Обзор макета</a
+                  >
+                </li>
+                <li>
+                  <a href="https://youtu.be/M__9mhFIGzI" target="_blank"
+                    >Создание структуры проекта</a
+                  >
+                </li>
+                <li>
+                  <a href="https://youtu.be/OMO6F8u067M" target="_blank"
+                    >Как открыть дизайн</a
+                  >
+                </li>
+              </ol>
+            </li>
+            <li>Установить и настроить редактор кода VSC</li>
+            <li>
+              Подготовить проект в VSCode: Следуя за лектором - прописать весь
+              необходимый код (просто все повторить)
+            </li>
+            <li>
+              Скачать макет и открыть его в Avocode. "Поиграться" с
+              функционалом: определить цвет заголовка, размер шрифта и т.д.
+            </li>
+            <li>
+              Сделать скриншот вашего кода (разметки) в VS Code с помощью любой
+              утилиты для скриншотов. Например,
+              <a href="http://joxi.ru/" target="_blank">Joxi</a>.
+            </li>
+            <li>
+              Скриншот отправляем в телеграм-канале "Марафон GoIT" через окно
+              сообщения в самом низу, как показано на скрине:
+              <div class="img-block">
+                <img src="./img/img1.jpg" class="img" alt="Скрин вставки ДЗ" />
+              </div>
+            </li>
+            <li>Ждете подтверждения выполнения от ментора</li>
+            <li>Радуетесь своим успехам и ждете следующего задания</li>
+          </ol>
+          <div class="deadline">
+            <p>ДЗ нужно сдать к 18:00 21.03.2020</p>
+            <p>Удачи</p>
+          </div>
         </div>
       </main>
     </div>
