--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <title>Home Work 1</title>
+    <title>Home Work</title>
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
@@ -50,10 +50,13 @@
                 </li>
               </ol>
             </li>
-            <li>Установить и настроить редактор кода VSC</li>
             <li>
-              Подготовить проект в VSCode: Следуя за лектором - прописать весь
-              необходимый код (просто все повторить)
+              Установить и настроить редактор кода
+              <a href="https://code.visualstudio.com" target="_blank">VSC</a>
+            </li>
+            <li>
+              Подготовить проект в VSCode: Следуя за лектором, прописать весь
+              необходимый код (просто все повторить).
             </li>
             <li>
               Скачать макет и открыть его в Avocode. "Поиграться" с
@@ -63,6 +66,12 @@
               Сделать скриншот вашего кода (разметки) в VS Code с помощью любой
               утилиты для скриншотов. Например,
               <a href="http://joxi.ru/" target="_blank">Joxi</a>.
+            </li>
+            <li>
+              У вас должен получится вот такой скриншот:
+              <div class="img-block">
+                <img src="./img/img01.jpg" class="img" alt="Скрин вставки ДЗ" />
+              </div>
             </li>
             <li>
               Скриншот отправляем в телеграм-канале "Марафон GoIT" через окно
